change to logo.jpg instead of Logo.jpg

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <header>
-    <img src="Logo.jpg" alt="Logo of our WebGIS">
+    <img src="logo.jpg" alt="Logo of our WebGIS">
     <h1>WebGIS Application</h1>
   </header>
   <main>
